--- a/workflows.yaml
+++ b/workflows.yaml
@@ -285,7 +285,7 @@ relatorio_teste_unitario:
         max_token_out: 30000
         
 geracao_codigo_a_partir_de_reuniao:
-  description: "Escrita de documentação do código."
+  description: "gerar código a partir de um descritivo de requisitos"
   extensions: [".py"]
   steps:
     - status_update: "analisando o relatório de requisitos"
@@ -305,26 +305,3 @@ geracao_codigo_a_partir_de_reuniao:
       params:
         tipo_analise: "agrupamento_commits"
         max_token_out: 30000
-
-relatorio_implentacao_feature:
-  description: "Refatoração de código, olhando somente o clean code."
-  extensions: [".py"]
-  steps:
-    - status_update: "analisando o repositório"
-      model_name: "gpt-4.1"
-      agent_type: "revisor"
-      params:
-        tipo_analise: "relatorio_implentacao_feature"
-    - status_update: "aplicando_as_mudancas_apontadas"
-      model_name: "claude-sonnet-4-20250514"
-      agent_type: "revisor"
-      params:
-        tipo_analise: "aplicacao_de_mudancas"
-        max_token_out: 30000
-    - status_update: "agrupando_commits"
-      model_name: "gpt-4.1-mini"
-      agent_type: "processador"
-      params:
-        tipo_analise: "agrupamento_commits"
-        max_token_out: 30000
-        
