--- a/workflows.yaml
+++ b/workflows.yaml
@@ -7,6 +7,7 @@ relatorio_avaliacao_terraform:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_avaliacao_terraform"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -29,6 +30,7 @@ relatorio_cleancode:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_cleancode"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -51,6 +53,7 @@ relatorio_conformidades:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_conformidades"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -73,6 +76,7 @@ relatorio_docstring:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_docstring"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -95,6 +99,7 @@ relatorio_documentacao:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_documentacao"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -117,6 +122,7 @@ relatorio_implentacao_feature:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_implentacao_feature"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -139,6 +145,7 @@ relatorio_owasp:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_owasp"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -161,6 +168,7 @@ relatorio_pentest:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_pentest"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -183,6 +191,7 @@ relatorio_performance_eficiencia:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_performance_eficiencia"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -205,6 +214,7 @@ relatorio_sast:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_sast"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -227,6 +237,7 @@ relatorio_simplicacao:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_simplicacao"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -249,6 +260,7 @@ relatorio_teste_integracao:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_teste_integracao"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -271,6 +283,7 @@ relatorio_teste_unitario:
       agent_type: "revisor"
       params:
         tipo_analise: "relatorio_teste_unitario"
+      requires_approval: true
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "revisor"
@@ -293,6 +306,7 @@ geracao_codigo_a_partir_de_reuniao:
       agent_type: "processador"
       params:
         tipo_analise: "geracao_codigo_a_partir_de_reuniao"
+      requires_approval: true
     - status_update: "escrita_codigo"
       model_name: "claude-sonnet-4-20250514"
       agent_type: "processador"
