--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ azure-core==1.35.0
 azure-search-documents==11.4.0
 
 # Ferramentas e Utilitários
+python-gitlab==6.3.0
 PyGithub==2.7.0
 redis==6.4.0
 pathspec>=0.12.0
