--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,17 @@
-# Core FastAPI e Servidor
-fastapi==0.116.1
-gunicorn==23.0.0
-uvicorn==0.33.0
-starlette==0.47.2
-
-# Pydantic e dependências
-pydantic==2.11.7
-pydantic_core==2.33.2
-annotated-types==0.7.0
-
-# Comunicação com APIs
-openai==1.99.6
-anthropic==0.64.0
-requests==2.32.4
-httpx==0.28.1
-httpcore==1.0.9
-
-# Azure SDK (Identidade e Key Vault)
-azure-identity==1.24.0
-azure-keyvault-secrets==4.10.0
-azure-core==1.35.0
-
-# Azure SDK para AI Search (RAG)
-azure-search-documents==11.4.0
-
-# Ferramentas e Utilitários
-PyGithub==2.7.0
-python-gitlab==6.3.0
-redis==6.4.0
-pathspec>=0.12.0
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.0
+requests==2.31.0
+PyGithub==1.59.1
+python-gitlab==4.4.0
+redis==5.0.1
 PyYAML==6.0.1
-
-# --- Sub-dependências ---
-anyio==4.10.0
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.3
-cryptography==45.0.6
-distro==1.9.0
-h11==0.16.0
-idna==3.10
-isodate==0.7.2
-jiter==0.10.0
-msal==1.33.0
-msal-extensions==1.3.1
-pycparser==2.22
-PyJWT==2.10.1
-PyNaCl==1.5.0
-setuptools==78.1.1
-six==1.17.0
-sniffio==1.3.1
-tqdm==4.67.1
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-urllib3==2.5.0
-wheel==0.45.1
+openai==1.6.1
+anthropic==0.8.1
+azure-identity==1.15.0
+azure-keyvault-secrets==4.7.0
+azure-search-documents==11.4.0
+azure-core==1.29.5
+python-multipart==0.0.6
+pytest==7.4.3
+pytest-asyncio==0.21.1
