refactor: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,106 +1,3 @@
-# =============================================================================
-# MCP Server - Multi-Agent Code Platform
-# Arquivo de Exemplo de Variáveis de Ambiente
-# =============================================================================
-# 
-# INSTRUÇÕES:
-# 1. Copie este arquivo para .env
-# 2. Preencha os valores reais das variáveis
-# 3. Nunca commite o arquivo .env no repositório
-#
-
-# =============================================================================
-# REDIS - Armazenamento de Jobs
-# =============================================================================
-# URL de conexão com o Redis (local ou remoto)
-# Formato: redis://[username:password@]host:port/database
-REDIS_URL=redis://localhost:6379/0
-
-# =============================================================================
-# AZURE KEY VAULT - Gerenciamento de Segredos
-# =============================================================================
-# URL do Azure Key Vault onde estão armazenados os segredos
-# Formato: https://seu-keyvault.vault.azure.net/
-KEY_VAULT_URL=https://exemplo-keyvault.vault.azure.net/
-
-# =============================================================================
-# AZURE OPENAI - Modelos de IA
-# =============================================================================
-# Endpoint do Azure OpenAI
-AZURE_OPENAI_MODELS=https://exemplo-openai.openai.azure.com/
-
-# Nome do deployment padrão no Azure OpenAI
-AZURE_DEFAULT_DEPLOYMENT_NAME=gpt-4
-
-# Nome do modelo de embedding para RAG
-AZURE_OPENAI_EMBEDDING_MODEL_NAME=text-embedding-ada-002
-
-# =============================================================================
-# AZURE AI SEARCH - Sistema RAG
-# =============================================================================
-# Endpoint do Azure AI Search
-AI_SEARCH_ENDPOINT=https://exemplo-search.search.windows.net
-
-# Nome do índice de busca
-AI_SEARCH_INDEX_NAME=politicas-desenvolvimento
-
-# =============================================================================
-# SEGREDOS NO AZURE KEY VAULT
-# =============================================================================
-# Os seguintes segredos devem estar configurados no Azure Key Vault:
-#
-# github-token              - Token de acesso ao GitHub (escopo: repo, workflow)
-# github-token-[org]        - Token específico por organização (opcional)
-# openaiapi                 - Chave da API OpenAI
-# azure-openai-modelos      - Chave da API Azure OpenAI
-# aisearchapi              - Chave da API Azure AI Search
-# ANTHROPICAPIKEY          - Chave da API Anthropic Claude (opcional)
-#
-# Exemplo de configuração no Key Vault:
-# - Nome do segredo: github-token
-# - Valor: ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-# =============================================================================
-# CONFIGURAÇÕES OPCIONAIS
-# =============================================================================
-# Ambiente de execução (development, staging, production)
-ENVIRONMENT=development
-
-# Nível de log (DEBUG, INFO, WARNING, ERROR)
-LOG_LEVEL=INFO
-
-# Timeout para requisições HTTP (em segundos)
-HTTP_TIMEOUT=300
-
-# =============================================================================
-# CONFIGURAÇÕES DE DESENVOLVIMENTO LOCAL
-# =============================================================================
-# Para desenvolvimento local, você pode usar estas configurações:
-# 
-# 1. Redis local:
-#    - Instale: brew install redis (Mac) ou apt-get install redis (Ubuntu)
-#    - Execute: redis-server
-#    - Use: REDIS_URL=redis://localhost:6379/0
-#
-# 2. Azure Key Vault:
-#    - Configure a autenticação do Azure CLI: az login
-#    - Ou use Service Principal com variáveis:
-#      AZURE_CLIENT_ID=seu-client-id
-#      AZURE_CLIENT_SECRET=seu-client-secret
-#      AZURE_TENANT_ID=seu-tenant-id
-#
-# 3. Testes:
-#    - Para testes, você pode usar valores fictícios
-#    - Certifique-se de que os testes não façam chamadas reais às APIs
-
-# =============================================================================
-# EXEMPLO DE VALORES PARA TESTES LOCAIS
-# =============================================================================
-# Descomente e ajuste as linhas abaixo para testes locais:
-#
-# REDIS_URL=redis://localhost:6379/1
-# KEY_VAULT_URL=https://test-keyvault.vault.azure.net/
-# AZURE_OPENAI_MODELS=https://test-openai.openai.azure.com/
-# AZURE_DEFAULT_DEPLOYMENT_NAME=gpt-35-turbo
-# AI_SEARCH_ENDPOINT=https://test-search.search.windows.net
-# AI_SEARCH_INDEX_NAME=test-index
+# Azure Blob Storage Configuration
+AZURE_STORAGE_CONNECTION_STRING=
+AZURE_STORAGE_CONTAINER_NAME=
