refactor: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,7 @@
-# Azure Key Vault Configuration
-KEY_VAULT_URL=https://your-keyvault.vault.azure.net/
+# Configurações do Azure OpenAI
+AZURE_OPENAI_MODELS=https://your-resource.openai.azure.com/
+AZURE_DEFAULT_DEPLOYMENT_NAME=gpt-4
 
-# Azure Blob Storage Configuration
-AZURE_STORAGE_CONTAINER_NAME=your-container-name
-AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME=AZURE_STORAGE_CONNECTION_STRING
-
-# Fallback: Direct connection string (optional)
-AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=...
+# Configurações do Azure Table Storage para log de tokens
+AZURE_TABLE_CONN_STRING=DefaultEndpointsProtocol=https;AccountName=yourstorageaccount;AccountKey=youraccountkey;EndpointSuffix=core.windows.net
+AZURE_TABLE_NAME=tokenlogs
