--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ azure-search-documents==11.4.0
 
 # azure storage
 azure-storage-blob==12.26.0
+azure-data-tables==12.7.0
 
 # Ferramentas e Utilitários
 PyGithub==2.7.0
