refactor: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-# Configurações do Azure OpenAI
-AZURE_OPENAI_MODELS=https://your-resource.openai.azure.com/
-AZURE_DEFAULT_DEPLOYMENT_NAME=gpt-4
-
-# Configurações do Azure Table Storage para log de tokens
-AZURE_TABLE_CONN_STRING=DefaultEndpointsProtocol=https;AccountName=yourstorageaccount;AccountKey=youraccountkey;EndpointSuffix=core.windows.net
+# Azure Table Storage Configuration
 AZURE_TABLE_NAME=tokenlogs
+AZURE_TABLE_CONN_STRING=DefaultEndpointsProtocol=https;AccountName=your_account_name;AccountKey=your_account_key;EndpointSuffix=core.windows.net
+
+# Alternative: Use Azure Key Vault secret name instead of direct connection string
+# AZURE_TABLE_CONN_STRING=your-keyvault-secret-name
+
+# Azure Key Vault Configuration (required if using secret names)
+AZURE_KEY_VAULT_URL=https://your-keyvault.vault.azure.net/
+AZURE_CLIENT_ID=your-client-id
+AZURE_CLIENT_SECRET=your-client-secret
+AZURE_TENANT_ID=your-tenant-id
