refactor: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,18 @@
-# Configurações do Azure OpenAI
-AZURE_OPENAI_MODELS=https://your-resource.openai.azure.com/
-AZURE_DEFAULT_DEPLOYMENT_NAME=gpt-4
+# Azure Configuration
+AZURE_TENANT_ID=your-tenant-id
+AZURE_CLIENT_ID=your-client-id
+AZURE_CLIENT_SECRET=your-client-secret
+AZURE_KEY_VAULT_URL=https://your-keyvault.vault.azure.net/
 
-# Configurações do Azure Table Storage para log de tokens
+# Azure Table Storage Configuration
+# Connection string for Azure Table Storage (can be stored in Key Vault)
 AZURE_TABLE_CONN_STRING=DefaultEndpointsProtocol=https;AccountName=yourstorageaccount;AccountKey=youraccountkey;EndpointSuffix=core.windows.net
+# Name of the table to store token logs
 AZURE_TABLE_NAME=tokenlogs
+
+# OpenAI Configuration
+OPENAI_API_KEY=your-openai-api-key
+
+# Application Configuration
+DEBUG=False
+LOG_LEVEL=INFO
