refactor: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,2 @@
-# Configurações do Azure OpenAI
-AZURE_OPENAI_MODELS=https://your-resource.openai.azure.com/
-AZURE_DEFAULT_DEPLOYMENT_NAME=gpt-4
-
-# Configurações do Azure Table Storage para log de tokens
-AZURE_TABLE_CONN_STRING=DefaultEndpointsProtocol=https;AccountName=yourstorageaccount;AccountKey=youraccountkey;EndpointSuffix=core.windows.net
-AZURE_TABLE_NAME=tokenlogs
+# Configuração do Azure Application Insights
+APPLICATIONINSIGHTS_CONNECTION_STRING=
