--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,12 @@ gunicorn==23.0.0
 uvicorn==0.33.0
 starlette==0.47.2
 
+# testes
+pytest==8.4.2
+pytest-mock==3.15.0
+pytest-cov==7.0.0
+pytest-asyncio==1.2.0
+
 # Pydantic e dependências
 pydantic==2.11.7
 pydantic_core==2.33.2
